# SummerGFX

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Demo/: CMakeLists.txt
Demo/shaders/: simple.ps  simple.vs
Demo/src/: rotating_triangle.cpp
GfxStorage/: CMakeLists.txt
GfxStorage/src/: shader_utils.cpp  shader_utils.h
OpenGL/: CMakeLists.txt
OpenGL/src/: extended_gfx.h  opengl_standard_gfx.cpp  standard_interface.cpp  standard_mesh.cpp  standard_shader.cpp
Standard/: CMakeLists.txt
Standard/src/: camera.h  defines.h  exception.h  font.h  gfx.h  interface.h  mesh.h  namedbuffer.h  renderable.h  shader.h  texture.h  viewport.h  window.h
UnitTests/: CMakeLists.txt
